# brush

./: Cargo.toml  deny.toml  gedanken  ideen
.github/workflows/: ci.yml
apps/brush-app/src/: lib.rs  wasm.rs
apps/brush-app/src/ui/: app.rs  datasets.rs  frustum_widget.rs  last_image_panel.rs  log_panel.rs  mod.rs  scene.rs  settings_popup.rs  splat_backbuffer.rs  stats.rs  ui_process.rs
apps/brush-app/src/ui/shaders/: frustum.wgsl
apps/brush-cli/src/: lib.rs
apps/brush-cxx-bridge/: CMakeLists.txt  Cargo.toml
apps/brush-cxx-bridge/src/: lib.rs
crates/brush-bench-test/src/: benches.rs
crates/brush-bench-test/tests/: finite_diff.rs  fuzz.rs  integration.rs
crates/brush-dataset/: Cargo.toml
crates/brush-dataset/src/: config.rs  image_cache.rs  incremental_scene_loader.rs  lib.rs  load_image.rs  scene.rs  scene_loader.rs
crates/brush-dataset/src/formats/: colmap.rs  mod.rs  nerfstudio.rs  realitycapture.rs
crates/brush-loss/src/: lib.rs
crates/brush-process/: Cargo.toml
crates/brush-process/src/: config.rs  incremental_train_stream.rs  lib.rs  message.rs  train_stream.rs
crates/brush-process/src/incremental_train_stream/: config.rs  incremental_database.rs  landmark_householding.rs  mod.rs  ui_interface.rs  view_sampling.rs
crates/brush-render-bwd/src/: burn_glue.rs  render_bwd.rs
crates/brush-render-bwd/src/kernels/: project_backwards.rs  rasterize_backwards.rs
crates/brush-render/src/: burn_glue.rs  camera.rs  gaussian_splats.rs  lib.rs  render.rs  shaders.rs
crates/brush-render/src/kernels/: helpers.rs  rasterize.rs  types.rs
crates/brush-rerun/src/: visualize_tools.rs
crates/brush-serde/src/: export.rs  import.rs
crates/brush-train/src/: config.rs  lod.rs  msg.rs  stats.rs  train.rs
crates/brush-vfs/src/: lib.rs
