[package]
name = "brush-cxx-bridge"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies]
# Brush deps.
brush-process.path = "../../crates/brush-process"
brush-dataset.path = "../../crates/brush-dataset"
brush-render.path = "../../crates/brush-render"
brush-serde.path = "../../crates/brush-serde"
brush-async.path = "../../crates/brush-async"
brush-app.path = "../brush-app"

burn-cubecl.workspace = true
tokio = { workspace = true, features = ["io-util", "rt", "rt-multi-thread"] }
tokio-stream.workspace = true

egui.workspace = true
eframe.workspace = true

anyhow.workspace = true
tracing.workspace = true
log.workspace = true

tracing-subscriber = { workspace = true, optional = true }
tracing-tracy = { workspace = true, optional = true }

serde.workspace = true
burn.workspace = true
burn-wgpu.workspace = true
glam.workspace = true
rand.workspace = true
egui_tiles.workspace = true
wgpu.workspace = true
web-time.workspace = true
humantime.workspace = true

bytemuck = { version = "1.14", features = ["derive"] }

serde_json.workspace = true

image = { workspace = true }

winit = { version = "0.30", features = ["default"] }
clap.workspace = true
env_logger.workspace = true

cxx = "1.0.194"

[build-dependencies]
cxx-build = "1.0.194"

[lints]
workspace = true
